--- a/c_code/e_jquery/html/ex_02_slideBtnBanner.html
+++ b/c_code/e_jquery/html/ex_02_slideBtnBanner.html
@@ -77,7 +77,6 @@
         1. 클릭시 해당배너가 나타나게
         2. focus처리시 해당배너가 나타나게
         3. 마우스올렸을경우 해당배너가 나타나게 -> 클릭처리는 해당배너로 포커스 강제이동
-        4. 접근성을 올려셔 키보드 방향키로 인디케이터를 이동하게 처리
      -->
      <li class="action"><a href="#pr_01"><span>상품_01 요약설명</span></a></li>
      <li><a href="#pr_02"><span>상품_02 요약설명</span></a></li>
@@ -97,6 +96,27 @@
   </div>
 </div>
 
+<!-- ============================================== -->
+<div class="part indicator_fade_slide">
+  <h2>인디케이터 이용한 fode처리되는 슬라이드 배너 만들기</h2>
+   <ul class="indicator hidden_wrap">
+     <li class="action"><a href="#pr_01"><span>상품_01 요약설명</span></a></li>
+     <li><a href="#pr_02"><span>상품_02 요약설명</span></a></li>
+     <li><a href="#pr_03"><span>상품_03 요약설명</span></a></li>
+     <li><a href="#pr_04"><span>상품_04 요약설명</span></a></li>
+     <li><a href="#pr_05"><span>상품_05 요약설명</span></a></li>
+   </ul>
+
+  <div class="slide_wrap">
+    <ul>
+      <li class="cake_01 action"><a id="pr_01" href="#">상품명_01</a></li>
+      <li class="cake_02"><a id="pr_02" href="#">상품명_02</a></li>
+      <li class="cake_03"><a id="pr_03" href="#">상품명_03</a></li>
+      <li class="cake_04"><a id="pr_04" href="#">상품명_04</a></li>
+      <li class="cake_05"><a id="pr_05" href="#">상품명_05</a></li>
+    </ul>
+  </div>
+</div>
 
 </div><!-- // #wrap -->
 
@@ -108,6 +128,6 @@
   <script src="../js/src/ex_02_slideBtnBanner.js"></script>
   <script src="../js/src/ex_02_slideBtnBanner2.js"></script>
   <script src="../js/src/ex_02_slideBtnBanner3.js"></script>
-  <!-- <script src="../js/src/ex_02_slideBtnBanner3-1.js"></script> -->
+  <script src="../js/src/ex_02_slideBtnBanner4.js"></script>
 </body>
 </html>
