--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -41,6 +41,8 @@
       <ul>
         <li><a href="./ex_01_accordion.html">아코디언메뉴</a></li>
         <li><a href="./ex_02_slideBtnBanner.html">좌우버튼 슬라이드배너</a></li>
+        <!-- <li><a href="./ex_03_fancybox_plugin.html">fancyBox이용한 기능</a></li> -->
+        <li><a href="./ex_03_modal.html">모달윈도우</a></li>
       </ul>
     </article>
 
