--- a/c_code/e_jquery/html/ex_03_modal.html
+++ b/c_code/e_jquery/html/ex_03_modal.html
@@ -32,10 +32,10 @@
   <div class="modal_01">
     <h2>modal window</h2>
     <ul class="clearfix">
-      <li data-big="cake_01.jpg"><button type="button"><span>이미지_01</span></button></li>
-      <li data-big="cake_02.jpg"><button type="button"><span>이미지_02</span></button></li>
-      <li data-big="cake_03.jpg"><button type="button"><span>이미지_03</span></button></li>
-      <li data-big="cake_04.jpg"><button type="button"><span>이미지_04</span></button></li>
+      <li data-big="juice_big_01.jpg"><button type="button"><span>이미지_01</span></button></li>
+      <li data-big="juice_big_02.jpg"><button type="button"><span>이미지_02</span></button></li>
+      <li data-big="juice_big_03.jpg"><button type="button"><span>이미지_03</span></button></li>
+      <li data-big="juice_big_04.jpg"><button type="button"><span>이미지_04</span></button></li>
     </ul>
   </div>
 
