--- a/c_code/e_jquery/html/ex_03_modal.html
+++ b/c_code/e_jquery/html/ex_03_modal.html
@@ -27,15 +27,15 @@
 <body>
   <!-- layout -->
 <div id="wrap">
-  <h1><a href="./">페이지이름</a></h1>
+  <h1><a href="./content.html">페이지이름</a></h1>
 
   <div class="modal_01">
     <h2>modal window</h2>
     <ul class="clearfix">
-      <li data-big="juice_big_01.jpg"><button type="button"><span>이미지_01</span></button></li>
-      <li data-big="juice_big_02.jpg"><button type="button"><span>이미지_02</span></button></li>
-      <li data-big="juice_big_03.jpg"><button type="button"><span>이미지_03</span></button></li>
-      <li data-big="juice_big_04.jpg"><button type="button"><span>이미지_04</span></button></li>
+      <li data-big="juice_big_01.jpg" data-narr="image_01 설명 lorem2"><button type="button"><span>이미지_01</span></button></li>
+      <li data-big="juice_big_02.jpg" data-narr="image_02 설명 loewm5"><button type="button"><span>이미지_02</span></button></li>
+      <li data-big="juice_big_03.jpg" data-narr="image_03 설명 lorem10"><button type="button"><span>이미지_03</span></button></li>
+      <li data-big="juice_big_04.jpg" data-narr="image_04 설명 lorem3"><button type="button"><span>이미지_04</span></button></li>
     </ul>
   </div>
 
