one page scroll step_01

--- a/c_code/e_jquery/html/ex_04_onepageScroll.html
+++ b/c_code/e_jquery/html/ex_04_onepageScroll.html
@@ -37,7 +37,7 @@
     <nav id="navBox">
       <h2>navigation</h2>
       <ul>
-        <li><a href="#headBox">home</a></li>
+        <li><a href="#wrap">home</a></li>
         <li><a href="#viewBox">광고영역</a></li>
         <li><a href="#conBox_01">본문영역1</a></li>
         <li><a href="#conBox_02">본문영역2</a></li>
@@ -57,6 +57,11 @@
     <h2>본문영역2</h2>
     
   </article>
+
+  <div class="top_move_btn">
+    <a href="#wrap">상단으로 이동</a>
+  </div>
+  
   <footer id="footBox">
     <h2>회사정보</h2>
     
