tab메뉴만들기1

--- a/c_code/e_jquery/html/ex_04_onepageScroll.html
+++ b/c_code/e_jquery/html/ex_04_onepageScroll.html
@@ -51,6 +51,33 @@
   </section>
   <article id="conBox_01">
     <h2>본문영역1</h2>
+    <div class="tab_li">
+      <ul>
+        <li><a href="#">tab_01</a></li>
+        <li><a href="#">tab_02</a></li>
+        <li><a href="#">tab_03</a></li>
+        <li><a href="#">tab_04</a></li>
+      </ul>
+    </div>
+  
+    <div class="tab_content">
+      <div class="tab_con_01">
+        <h3>tab_01</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, magni. Hic nobis sunt iure beatae, temporibus cumque ratione fugit voluptates est nostrum rem quas illo minus aliquid quia ab sit.</p>
+      </div>
+      <div class="tab_con_02">
+        <h3>tab_02</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A perspiciatis atque at iusto culpa saepe dolore ullam repellat dolorem porro obcaecati, expedita rerum maxime velit delectus voluptatem! Repudiandae, voluptatum eveniet.</p>
+      </div>
+      <div class="tab_con_03">
+        <h3>tab_03</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eaque temporibus voluptatum quam quo eos nisi hic accusamus expedita! Libero quis sint ad corrupti! Architecto voluptatem aliquam tempora quidem nostrum.</p>
+      </div>
+      <div class="tab_con_04">
+        <h3>tab_04</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus excepturi mollitia illo! Laborum id dolorem itaque cum ea voluptate laudantium mollitia distinctio deleniti. Perspiciatis quaerat modi consequuntur cumque nesciunt id!</p>
+      </div>
+    </div>
     
   </article>
   <article id="conBox_02">
