dl type  tab메뉴 set

--- a/c_code/e_jquery/html/ex_04_onepageScroll.html
+++ b/c_code/e_jquery/html/ex_04_onepageScroll.html
@@ -82,6 +82,20 @@
   </article>
   <article id="conBox_02">
     <h2>본문영역2</h2>
+    <div class="title_tab_style">
+      <!-- dl>(dt>a[href="#"]{tab_title_$$}^dd{lorem$0})*4 -->
+      
+      <dl>
+        <dt><a href="#">tab_title_01</a></dt>
+        <dd>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, voluptas.</dd>
+        <dt><a href="#">tab_title_02</a></dt>
+        <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel amet rerum voluptates necessitatibus officiis sunt ut animi laboriosam asperiores quidem!</dd>
+        <dt><a href="#">tab_title_03</a></dt>
+        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, deleniti vero! Sequi suscipit accusamus sunt dolor fugit omnis minima laudantium consequuntur beatae et modi ducimus repudiandae, enim doloremque voluptas? Placeat.</dd>
+        <dt><a href="#">tab_title_04</a></dt>
+        <dd>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui ullam ad voluptates dolore beatae dolor eaque magni. Quod unde, eos sunt nostrum tempora explicabo exercitationem! Fugiat, necessitatibus odio. Aut velit voluptas iste reiciendis vero impedit exercitationem iure aliquid earum voluptate.</dd>
+      </dl>
+    </div>
     
   </article>
 
