jquery responsiveweb import처리방법

--- a/c_code/e_jquery/html/rwdTemp/rwdTemp_tablet.html
+++ b/c_code/e_jquery/html/rwdTemp/rwdTemp_tablet.html
@@ -5,3 +5,4 @@
   <img src="../img/modal/juice_big_03.jpg" alt="">
   <img src="../img/modal/juice_big_04.jpg" alt="">
 </div>
+<script src="../js/rwdTemp_tablet.js"></script>
