responsiveweb menu and mobile menu btn click

--- a/c_code/e_jquery/html/ex_06_rwd_menu.html
+++ b/c_code/e_jquery/html/ex_06_rwd_menu.html
@@ -30,10 +30,11 @@
   <header id="headBox">
     <h1><a href="./">페이지이름</a></h1>
     <nav id="navBox">
-      <h2 class="hidden_context">global navigation</h2>
+      <h2 class="hidden_context">
+        global navigation</h2>
       <div class="menu_btn">
         <button type="button">
-          <span>메뉴</span>
+          <span class="hidden_context">메뉴</span>
           <i class="line_01"></i>
           <i class="line_02"></i>
           <i class="line_03"></i>
