--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -34,6 +34,7 @@
         <li><a href="./jq_01_selector.html">기본 선택자, css사용방법</a></li>
         <li><a href="./jq_02_showHide.html">선택요소 나타나기 및 사라지기</a></li>
         <li><a href="./jq_03_makeRemove.html">생성/삭제</a></li>
+        <li><a href="./jq_04_importJson.html">json파일 불러오기</a></li>
 
       </ul>
       <hr />
@@ -48,6 +49,7 @@
         <li><a href="./ex_06_rwd_menu.html">
           반응형으로 <abbr title="global navigation bar">gnb</abbr>영역구성하기</a></li>
         <li><a href="./ex_07_mousewheel.html">마우스 휠 처리기능</a></li>
+        <li><a href="./eq_08_moreBtn.html">더보기 버튼 클릭</a></li>
       </ul>
     </article>
 
