--- a/c_code/e_jquery/html/ex_09_notice.html
+++ b/c_code/e_jquery/html/ex_09_notice.html
@@ -32,6 +32,10 @@
   <div class="notice_board">
     <h2>게시판만들기</h2>
     <div class="context">
+      <div class="select_area">
+        <button type="button" class="sort_01">오름차순</button>
+        <button type="button" class="sort_02">내름차순</button>
+      </div>
       <!-- ul>li*5>a>em{1}+span{lorem_$$} -->
       <ul>
         <!-- <li><a href="#"><em>5</em><span>lorem_01</span></a></li>
