게시판 다음내용버튼

--- a/c_code/e_jquery/html/ex_09_notice.html
+++ b/c_code/e_jquery/html/ex_09_notice.html
@@ -52,6 +52,11 @@
         <li><a href="#">03</a></li>
         <li><a href="#">04</a></li> -->
       </ul>
+
+      <div class="more_btn">
+        <button type="button" class="next_notice">다음목록</button>
+        <button type="button" class="prev_notice">이전목록</button>
+      </div>
     </div>
   </div>
 
