--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -51,6 +51,7 @@
         <li><a href="./ex_07_mousewheel.html">마우스 휠 처리기능</a></li>
         <li><a href="./eq_08_moreBtn.html">더보기 버튼 클릭</a></li>
         <li><a href="./ex_09_notice.html">게시판만들기</a></li>
+        <li><a href="./ex_10_zoom.html">확대이미지만들기</a></li>
       </ul>
     </article>
 
