landing base set_01

--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -54,6 +54,7 @@
         <li><a href="./ex_10_zoom.html">확대이미지만들기</a></li>
         <li><a href="./ex_11_mousemove.html">마우스이동시 객체이동하기</a></li> 
         <li><a href="./ex_12_mousemove2.html">마우스이동시 이미지변경하기</a></li> 
+        <li><a href="./ex_13.landing.html">landing 웹페이지</a></li> 
       </ul>
     </article>
 
