--- a/c_code/e_jquery/html/ex_13.landing.html
+++ b/c_code/e_jquery/html/ex_13.landing.html
@@ -33,15 +33,21 @@
   <section id="viewBox">
     <h2>광고영역</h2>
   </section>
-  
+
   <article id="conBox">
     <h2>landing 페이지</h2>
+    <div class="content_area">
+      간단한 상자 생성
+    </div>
   </article>
   <article id="moreBox">
     <h2>lang2 페지이</h2>
+    <div class="more_area">
+      추가상자
+    </div>
   </article>
 
-  <footer id="footbox">
+  <footer id="footBox">
     <h2>company information</h2>
   </footer>
 </div>
