fire watch game html

--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -55,10 +55,14 @@
         <li><a href="./ex_11_mousemove.html">마우스이동시 객체이동하기</a></li> 
         <li><a href="./ex_12_mousemove2.html">마우스이동시 이미지변경하기</a></li> 
         <li><a href="./ex_13.landing.html">landing 웹페이지</a></li> 
+        <li><a href="./ex_14_parallax.html">parallax 웹페이지 만들기(firewatchgame페이지 따라만들기)</a></li>
       </ul>
+
     </article>
 
+    <p><a href="./test.html">test</a></p>
   </div>
+  
 
   <!-- script -->
   <script src="../js/base/jquery-3.5.1.js"></script>
