parallax css and html modify

--- a/c_code/e_jquery/html/ex_14_parallax.html
+++ b/c_code/e_jquery/html/ex_14_parallax.html
@@ -27,7 +27,7 @@
 <body>
   <!-- layout -->
 <div id="wrap">
-  <header id="headbox">
+  <header id="headBox">
     <h1><a href="./content.html">jQuery- fire Watch Game 페이지 따라만들기</a></h1>
     <nav id="navBox">
       <h2 class="hidden_context">global navigation</h2>
