--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -56,6 +56,9 @@
         <li><a href="./ex_12_mousemove2.html">마우스이동시 이미지변경하기</a></li> 
         <li><a href="./ex_13.landing.html">landing 웹페이지</a></li> 
         <li><a href="./ex_14_parallax.html">parallax 웹페이지 만들기(firewatchgame페이지 따라만들기)</a></li>
+        <li><a href="./ex_15_parallax2.html">
+          parallax웹페이지만들기2(the-goonies.webflow.io 느낌따라하기)
+        </a></li>
       </ul>
 
     </article>
