parallax scale Set

--- a/c_code/e_jquery/html/ex_15_parallax2.html
+++ b/c_code/e_jquery/html/ex_15_parallax2.html
@@ -37,6 +37,9 @@
       <div class="back_image"></div>
     </div>
   </header>
+  <div class="blink_area">
+    <!-- #headBox를 고정하여, 스크롤시 #subNavBox요소가 나타나게 하기위한 공백영역 -->
+  </div>
   <article id="subNavBox">
     <h2>local navigation</h2>
     <ul>
