img and like pin set_01

--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -59,6 +59,8 @@
         <li><a href="./ex_15_parallax2.html">
           parallax웹페이지만들기2(the-goonies.webflow.io 느낌따라하기)
         </a></li>
+        <li><a href="./ex_16_like_pinterest.html">pinterest형식 따라만들기</a></li>
+
       </ul>
 
     </article>
