pinterest step_01 layout complete

--- a/c_code/e_jquery/html/ex_16_like_pinterest.html
+++ b/c_code/e_jquery/html/ex_16_like_pinterest.html
@@ -40,5 +40,6 @@
   <script src="../js/base/jquery-3.5.1.js"></script>
   <script src="../js/base/jquery-ui.js"></script>
   <script src="../js/src/ex_16_like_pinterest.js"></script>
+  <!-- <script src="../js/src/ex_16_like_pinterest_02.js"></script> -->
 </body>
 </html>
