--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -60,7 +60,7 @@
           parallax웹페이지만들기2(the-goonies.webflow.io 느낌따라하기)
         </a></li>
         <li><a href="./ex_16_like_pinterest.html">pinterest형식 따라만들기</a></li>
-
+        <li><a href="./ex_17_map.html">카카오지도 활용하기</a></li>
       </ul>
 
     </article>
