--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -59,8 +59,9 @@
         <li><a href="./ex_15_parallax2.html">
           parallax웹페이지만들기2(the-goonies.webflow.io 느낌따라하기)
         </a></li>
-        <li><a href="./ex_16_like_pinterest.html">pinterest형식 따라만들기</a></li>
+        <li><a href="./ex_16_like_pinterest.html">핀터레스트형식 따라만들기</a></li>
         <li><a href="./ex_17_map.html">카카오지도 활용하기</a></li>
+        <li><a href="./ex_18_link_pinterest2.html">핀터레스트형식 따라만들기 2</a></li>
       </ul>
 
     </article>
