pinterest card Set

--- a/c_code/e_jquery/html/ex_18_link_pinterest2.html
+++ b/c_code/e_jquery/html/ex_18_link_pinterest2.html
@@ -33,16 +33,8 @@
   <section id="cardBox">
     <h2>카드 리스트</h2>
     <div class="card_area">
-      <!-- .card>.card_img+a>dl>dt+dd -->
-      <div class="card">
-        <div class="card_img"></div>
-        <a href="#">
-          <dl>
-            <dt>title</dt>
-            <dd>Lorem, ipsum.</dd>
-          </dl>
-        </a>
-      </div>
+      <!-- .card>.card_img+.card_narr>a>dl>dt+dd -->
+      
     </div>
   </section>
 </div>
