scroll percent check:

--- a/c_code/e_jquery/html/ex_18_link_pinterest2.html
+++ b/c_code/e_jquery/html/ex_18_link_pinterest2.html
@@ -32,7 +32,7 @@
   </header>
   <section id="cardBox">
     <h2>카드 리스트</h2>
-    <div class="card_area">
+    <div class="card_area clearfix">
       <!-- .card>.card_img+.card_narr>a>dl>dt+dd -->
       
     </div>
