jquery 내용디자인 정리

--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <!-- layout -->
-  <div id="wrap">
+  <div id="wrap" class="info_content">
     <header id="headBox">
       <h1>jQuery 기초이해하기</h1>
     </header>
@@ -41,7 +41,7 @@
       <h2>샘플 예제</h2>
       <ul>
         <li><a href="./ex_01_accordion.html">아코디언메뉴</a></li>
-        <li><a href="./ex_02_slideBtnBanner.html">좌우버튼 슬라이드배너</a></li>
+        <li><a href="./ex_02_slideBtnBanner.html">슬라이드배너 기능 모음</a></li>
         <!-- <li><a href="./ex_03_fancybox_plugin.html">fancyBox이용한 기능</a></li> -->
         <li><a href="./ex_03_modal.html">모달윈도우</a></li>
         <li><a href="./ex_04_onepageScroll.html">스크롤시 상단고정처리, 클릭시 해당페이지 이동</a></li>
@@ -62,11 +62,9 @@
         <li><a href="./ex_16_like_pinterest.html">핀터레스트형식 따라만들기</a></li>
         <li><a href="./ex_17_map.html">카카오지도 활용하기</a></li>
         <li><a href="./ex_18_link_pinterest2.html">핀터레스트형식 따라만들기 2</a></li>
+        <li><a href="./test.html">글자 한글자씩 타이핑처리되게 만들기</a></li>
       </ul>
-
     </article>
-
-    <p><a href="./test.html">test</a></p>
   </div>
   
 
