--- a/c_code/e_jquery/html/test.html
+++ b/c_code/e_jquery/html/test.html
@@ -30,7 +30,7 @@
 <body>
   <!-- layout -->
 <div id="wrap">
-  <h1><a href="./">페이지이름</a></h1>
+  <h1><a href="./content.html">목차 돌아가기</a></h1>
   <div class="action">
     <p>web publisher</p>
   </div>
