--- a/c_code/e_jquery/html/jq_04_importJson.html
+++ b/c_code/e_jquery/html/jq_04_importJson.html
@@ -27,7 +27,7 @@
 <body>
   <!-- layout -->
 <div id="wrap">
-  <h1><a href="./">jQuery  기초</a></h1>
+  <h1><a href="./content.html">jQuery  기초</a></h1>
   
 
 </div>
